<resources>
    <string name="app_name">Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="options">Options</string>
    <string name="log_out">Log out</string>
</resources>
