<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_camera"
            android:title="@string/camera" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
    </group>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_exit"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
